...
    android:layout_height="match_parent"
    tools:context="ch.epfl.sweng.fiktion.views.tests.FindNearestPoisActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <SeekBar
        android:id="@+id/searchRadius"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="199dp"
        android:layout_height="17dp"
        android:max="100"
        android:progress="50"
        app:layout_constraintLeft_toLeftOf="parent"
...
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/searchRadius"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/_findNearPois"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:onClick="startDisplayNearestPoisActivity"
        android:text="@string/find_near_places"
        app:layout_constraintLeft_toLeftOf="parent"
...
