<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- main content -->
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/menu_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ViewStub
            android:id="@+id/layout_stub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </ScrollView>

    <!-- navigation drawer -->
    <ListView
        android:id="@+id/menu_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#FFF"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp" />


</android.support.v4.widget.DrawerLayout>