<?xml version="1.0" encoding="utf-8"?>
<!-- Image descriptions and titles are hard coded, no reason to put them in res -->
<!-- lints created by colors for API more than 23 are suppressed, color is not a real problem -->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_main_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="beforeDescendants"
    android:elevation="0dp"
    android:focusableInTouchMode="true"
    android:paddingBottom="20dp"
...
