...
            android:id="@+id/add_poi_scroll_constraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true">

            <Button
                android:id="@+id/add_poi_fiction_button"
                android:layout_width="60dp"
                android:layout_height="32dp"
                android:layout_marginEnd="22dp"
                android:layout_marginTop="48dp"
                android:background="@color/colorPrimary"
                android:onClick="addFiction"
...
